--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="🔥Nice🔥">
-<meta property="og:description" content="💥Good💥">
-<meta property="og:image" content="https://img2.goodfon.ru/wallpaper/nbig/2/93/priroda-zelenyy-list-voda.jpg">
+<meta property="og:title" content="👇Postupujte podľa tohto odkazu a zabudnite na svoje problémy so srdcom!❤️">
+<meta property="og:description" content="💥Všetky odpovede nájdete na tomto odkaze!👉">
+<meta property="og:image" content="https://i.imgur.com/PB1Wtdd.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
