--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="👇Postupujte podľa tohto odkazu a zabudnite na svoje problémy so srdcom!❤️">
 <meta property="og:description" content="💥Všetky odpovede nájdete na tomto odkaze!👉">
-<meta property="og:image" content="https://i.imgur.com/PB1Wtdd.png">
+<meta property="og:image" content="https://i.imgur.com/PdnWSXd.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
